--- a/app/templates/solarBeam/gestor/gestor_ofertas.html
+++ b/app/templates/solarBeam/gestor/gestor_ofertas.html
@@ -9,12 +9,12 @@
 
 {% block content %}
 <section>
-    {% set ofertas_predim = current_user.user_rol.gestor.get_ofertas_by_status(0) %}
-    {% set ofertas_dimen = current_user.user_rol.gestor.get_ofertas_by_status(1) %}
-    {% set ofertas_adqui = current_user.user_rol.gestor.get_ofertas_by_status(2) %}
-    {% set ofertas_insta = current_user.user_rol.gestor.get_ofertas_by_status(3) %}
-    {% set ofertas_puestaMarcha = current_user.user_rol.gestor.get_ofertas_by_status(4) %}
-    {% set ofertas_activas = current_user.user_rol.gestor.get_ofertas_activas() %}
+    {% set ofertas_predim = current_user.user_rol.get_ofertas_by_status(0) %}
+    {% set ofertas_dimen = current_user.user_rol.get_ofertas_by_status(1) %}
+    {% set ofertas_adqui = current_user.user_rol.get_ofertas_by_status(2) %}
+    {% set ofertas_insta = current_user.user_rol.get_ofertas_by_status(3) %}
+    {% set ofertas_puestaMarcha = current_user.user_rol.get_ofertas_by_status(4) %}
+    {% set ofertas_activas = current_user.user_rol.get_ofertas_activas() %}
     <div class="container mt-3 mb-3">
         <div class="card rounded shadow">
             <div class="card-header h4 text-center">Mis ofertas</div>
@@ -98,7 +98,7 @@
                                 <tr>
                                     <td class="align-middle">{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td class="align-middle">{{oferta.comprador.user_role.user.email}}</td>
+                                    <td class="align-middle">{{oferta.comprador.user.email}}</td>
                                     {% else %}
                                     <td class="align-middle">Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
@@ -117,24 +117,14 @@
                                         {% endif %}
                                     </td>
                                     <td class="align-middle">
-                                        <p>
-
-                                            {% if oferta.pre_dimensionamiento.status_gestor %}
-                                            {% if not oferta.pre_dimensionamiento.status_comprador %}
-                                            <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
-                                                class="btn btn-info">Falta confirmación de
-                                                comprador</a>
-                                            {% else %}
-                                            <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
-                                                class="btn btn-success">Falta confirmación de
-                                                otras ofertas</a>
-                                            {% endif %}
-                                            {% else %}
-                                            <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
-                                                class="btn btn-danger">Falta confirmación</a>
-                                            {% endif %}
-
-                                        </p>
+                                        {% if oferta.pre_dimensionamiento.status_gestor %}
+                                        <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                            class="text-info font-weight-bold">Falta confirmación de
+                                            comprador</a>
+                                        {% else %}
+                                        <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                            class="btn btn-danger">Falta confirmación</a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -160,7 +150,7 @@
                                 <tr>
                                     <td class="align-middle">{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td class="align-middle">{{oferta.comprador.user_role.user.email}}</td>
+                                    <td class="align-middle">{{oferta.comprador.user.email}}</td>
                                     {% else %}
                                     <td class="align-middle">Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
@@ -179,10 +169,12 @@
                                         {% endif %}
                                     </td>
                                     <td class="align-middle">
-                                        {% if oferta.dimensionamiento.proyecto_ejecutivo_key %}
-                                        <a href="{{ url_for('solarbeam.gestor_oferta_dim_conf', id_oferta=oferta.id) }}"
-                                            class="btn btn-success">En espera de la confirmación del
-                                            comprador</a>
+                                        {% if oferta.dimensionamiento.is_complete %}
+                                        <span class="text-info font-weight-bold">En espera de la confirmación del
+                                            resto de ofertas</span>
+                                        {% elif oferta.dimensionamiento.proyecto_ejecutivo_key %}
+                                        <span class="text-secondary font-weight-bold">En espera de la confirmación del
+                                            comprador</span>
                                         {% else %}
                                         <a href="{{ url_for('solarbeam.gestor_oferta_dim_conf', id_oferta=oferta.id) }}"
                                             class="btn btn-danger">Confirmar datos técnicos</a>
@@ -210,7 +202,7 @@
                                 <tr>
                                     <td>{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td>{{oferta.comprador.user_role.user.email}}</td>
+                                    <td>{{oferta.comprador.user.email}}</td>
                                     {% else %}
                                     <td>Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
@@ -238,7 +230,7 @@
                                 <tr>
                                     <td>{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td>{{oferta.comprador.user_role.user.email}}</td>
+                                    <td>{{oferta.comprador.user.email}}</td>
                                     {% else %}
                                     <td>Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
@@ -266,7 +258,7 @@
                                 <tr>
                                     <td>{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td>{{oferta.comprador.user_role.user.email}}</td>
+                                    <td>{{oferta.comprador.user.email}}</td>
                                     {% else %}
                                     <td>Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
@@ -302,7 +294,7 @@
                         <thead>
                             <th>Entidad Federativa</th>
                             <th>Creación de la oferta</th>
-                            <th>Estado</th>
+                            <th>Estado actual</th>
                         </thead>
                         <tbody id="tablaOfertasInfo">
                         </tbody>
@@ -327,46 +319,6 @@
         const tableOfertasBody = document.querySelector('#tablaOfertasInfo');
         $(copyBtn).tooltip({ trigger: 'manual' }).tooltip('disable');
 
-        const renderOfertasAgrupadasInfo = (data) => {
-            tableOfertasBody.innerHTML = '';
-            let status = {
-                1: 'pre_dimensionamiento', 2: 'dimensionamiento'
-            }
-            let statusName = status[data.status + 1]
-
-            data.ofertas.forEach(oferta => {
-                let row = document.createElement('tr');
-                let entidadFed = document.createElement('td');
-                let dateTime = document.createElement('td');
-                let statusCompleted = document.createElement('td');
-                let statusIcon = document.createElement('i');
-
-                entidadFed.innerText = oferta.cp.estado;
-                dateTime.innerText = oferta.timestamp.split('T')[0];
-
-                statusIcon.classList.add('fa')
-                if (oferta[statusName]['is_complete']) statusIcon.classList.add('fa-check-circle')
-                if (!oferta[statusName]['is_complete']) statusIcon.classList.add('fa-times-circle')
-                statusCompleted.appendChild(statusIcon)
-
-                row.appendChild(entidadFed)
-                row.appendChild(dateTime)
-                row.appendChild(statusCompleted)
-
-                tableOfertasBody.appendChild(row)
-            })
-        }
-
-        const updateInfoOfertasAgrupadas = async (btn) => {
-            let licitacionId = btn.dataset.licitacion
-            console.log(licitacionId)
-            let resp = await fetch('../../../api/licitacion_info?' + new URLSearchParams({
-                licitacionId
-            }))
-            let data = await resp.json()
-            renderOfertasAgrupadasInfo(data)
-
-        }
 
         const addListeners = () => {
             copyBtn.addEventListener('click', () => {
@@ -387,7 +339,7 @@
             ofertasAgruBtn.forEach(ofertaAgruBtn => {
                 ofertaAgruBtn.addEventListener('click', () => {
                     console.log(`click: ${ofertaAgruBtn.id}`);
-                    updateInfoOfertasAgrupadas(ofertaAgruBtn)
+                    utilFunctions.updateInfoOfertasAgrupadas(ofertaAgruBtn, tableOfertasBody)
                 })
             })
         }
