--- a/app/templates/solarBeam/reg_oferta_compra.html
+++ b/app/templates/solarBeam/reg_oferta_compra.html
@@ -27,11 +27,28 @@
                             <h5>Tipo de oferta</h5>
                         </div>
                         <div class="form-row mt-3">
-                            <label for="tipoOferta">Selecciona el tipo de oferta</label>
-                            <select name="tipoOferta" id="tipoOferta" class="form-control">
-                                <option value="ofertaInd">Oferta individual</option>
-                                <option value="ofertaAgr">Oferta agrupada</option>
-                            </select>
+                            <div class="col-sm-6">
+                                <label for="tipoOferta">Selecciona el tipo de oferta</label>
+                                <select name="tipoOferta" id="tipoOferta" class="form-control">
+                                    <option value="ofertaInd">Oferta individual</option>
+                                    <option value="ofertaLicPub">Unirse a una licitación pública</option>
+                                    <option value="ofertaNuevaLicPriv">Crear una licitación privada</option>
+                                    <option value="ofertaUnirLicPriv">Unirse a una licitación privada</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="codigoLicit">Código de licitación</label>
+                                <input type="text" name="codigoLicit" id="codigoLicit"
+                                    class="form-control {{'is-invalid' if errorCodeLicit}}">
+                                <div class="invalid-feedback">
+                                    {% if errorLicitDimen %}
+                                    Está licitación se encuentra en un procesado avanzado, no puede aceptar nuevas
+                                    ofertas.
+                                    {% else %}
+                                    Código de licitación invalido, debe de ser 6 dígitos.
+                                    {% endif %}
+                                </div>
+                            </div>
                         </div>
                         <div class="form-row mt-2">
                             <div class="col-sm-6">
@@ -44,7 +61,7 @@
                             <div class="col-sm-6">
                                 <label for="codigoGestor">Código de gestor</label>
                                 <input type="text" name="codigoGestor" id="codigoGestor"
-                                    class="form-control {{'is-invalid' if errorGestorCord}}">
+                                    class="form-control {{'is-invalid' if errorCodeGestor}}">
                                 <div class="invalid-feedback">
                                     Código de gestor invalido, debe de ser 6 dígitos.
                                 </div>
@@ -195,6 +212,8 @@
 
     const appLogic = (() => {
         const form = document.querySelector('#form');
+        const ofertaOpts = document.querySelector('#tipoOferta');
+        const codigoLicit = document.querySelector('#codigoLicit');
         const nombreProy = document.querySelector('#proyectoNombre');
         const capMin = document.querySelector('#capMin');
         const capMax = document.querySelector('#capMax');
@@ -214,6 +233,17 @@
         }
 
         const validateNombreProj = () => validations.isRequired(nombreProy.value);
+
+        const validateCodigoLicit = () => {
+            if (ofertaOpts.value === 'ofertaUnirLicPriv') {
+                return (
+                    validations.isRequired(codigoLicit.value) &&
+                    validations.isBetween(codigoLicit.value.length, 6, 6)
+                )
+            } else {
+                return true
+            }
+        }
 
         const validateCodigoGestor = () => {
             if (gestorOpts.value === 'conGestor') {
@@ -262,6 +292,7 @@
 
             errors.push(!validateCoords() ? validations.showErrorMap('errorCoords') : true);
             errors.push(!validateNombreProj() ? validations.showError(nombreProy) : true);
+            errors.push(!validateCodigoLicit() ? validations.showError(codigoLicit) : true);
             errors.push(!validateCodigoGestor() ? validations.showError(codigoGestor) : true);
             errors.push(!validateCapMin() ? validations.showError(capMin) : true);
             errors.push(!validateCapMax() ? validations.showError(capMax) : true);
@@ -274,6 +305,15 @@
 
 
 
+        }
+
+        const updateLicitCodeInput = () => {
+            console.log('??')
+            if (ofertaOpts.value === 'ofertaUnirLicPriv') codigoLicit.disabled = false;
+            else {
+                codigoLicit.value = '';
+                codigoLicit.disabled = true;
+            }
         }
 
         const updateGestorCodeInput = () => {
@@ -290,7 +330,8 @@
                 Object.entries(valuesCompleted).forEach(([divId, divValue]) => {
                     let div = document.getElementById(divId);
                     if (divId === 'error') return
-                    div.classList.add('is-valid');
+                    if (divId === '')
+                        div.classList.add('is-valid');
                     div.value = divValue;
                 })
 
@@ -298,8 +339,9 @@
                 errorDiv.classList.remove('is-valid');
                 errorDiv.classList.add('is-invalid');
 
-                updateGestorCodeInput();
             }
+            updateGestorCodeInput();
+            updateLicitCodeInput();
         }
 
 
@@ -307,6 +349,10 @@
             form.addEventListener('submit', (e) => {
                 e.preventDefault();
                 validateForm();
+            })
+
+            ofertaOpts.addEventListener('change', () => {
+                updateLicitCodeInput();
             })
 
             gestorOpts.addEventListener('change', () => {
