se añadio la sección de equipos a skyterra

--- a/app/templates/static_pages/includes/header.html
+++ b/app/templates/static_pages/includes/header.html
@@ -44,22 +44,24 @@
                                 <li aria-haspopup="true"><a href="#">Instalación</a></li>
                                 <li aria-haspopup="true"><a href="#">Puesta en marcha</a></li>
                             </ul>
-                        </li> <!-- END DROPDOWN MENU -->
+                        </li>
+                        <!-- END DROPDOWN MENU -->
 
                         <!-- SIMPLE NAVIGATION LINK -->
-                        <li class="nl-simple" aria-haspopup="true"><a href="#">Gestores</a></li>
+                        <li class="nl-simple" aria-haspopup="true"><a href="/equipos">Equipos</a></li>
 
                         <!-- SIMPLE NAVIGATION LINK -->
-                        <li class="nl-simple" aria-haspopup="true"><a href="#">Integradores</a></li>
+                        <!-- <li class="nl-simple" aria-haspopup="true"><a href="#">Integradores</a></li> -->
 
                         <!-- DROPDOWN MENU -->
-                        <li aria-haspopup="true"><a href="#">Equipos<span class="wsarrow"></span></a>
+                        <!-- <li aria-haspopup="true"><a href="#">Equipos<span class="wsarrow"></span></a>
                             <ul class="sub-menu">
                                 <li aria-haspopup="true"><a href="#">Paneles</a></li>
                                 <li aria-haspopup="true"><a href="#">Inversores</a></li>
                                 <li aria-haspopup="true"><a href="#">Estructuras</a></li>
                             </ul>
-                        </li> <!-- END DROPDOWN MENU -->
+                        </li>  -->
+                        <!-- END DROPDOWN MENU -->
 
                         <!-- HEADER BUTTON -->
                         <li class="nl-simple" aria-haspopup="true">
