--- a/app/static/css/solarbeam/solarbeam.css
+++ b/app/static/css/solarbeam/solarbeam.css
@@ -23,3 +23,20 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+.table-delete-btn td:last-child i {
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.15s;
+    color: rgba(255, 0, 0, 0.589);
+    cursor: pointer;
+}
+
+.table-delete-btn tr:hover > td:last-child > i {
+    opacity: 1;
+    visibility: visible;
+}
+
+.table-delete-btn td:last-child i:hover {
+    color: rgba(255, 0, 0, 1);
+}
