--- a/app/templates/solarBeam/integrador/integrador_ofertas.html
+++ b/app/templates/solarBeam/integrador/integrador_ofertas.html
@@ -28,7 +28,7 @@
                         <button class="btn btn-primary" id="getDataBtn">Actualizar datos</button>
                     </div>
                 </div>
-                <table class="table table-card text-center">
+                <table class="table table-card text-center table-delete-btn">
                     <thead>
                         <th>Nombre</th>
                         <th>Capacidad kW</th>
@@ -48,6 +48,34 @@
     </div>
 
 </section>
+
+
+<form method="POST" id="deleteOffer">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <input type="hidden" name="tipo" value="eliminar">
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Eliminar oferta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Estas apunto de eliminar una oferta, este procedimiento es irreversible.</p>
+                    <p>¿Estás seguro que quieres continuar?</p>
+                    <input type="hidden" name="idOferta" id="inputBorrarOferta">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="submit" value="Eliminar" class="btn btn-danger">Eliminar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
 {% endblock content %}
 
 {% block javascript %}
@@ -57,6 +85,15 @@
         const dataBtn = document.querySelector('#getDataBtn');
         const tableBody = document.querySelector('#ofertaProvInfo');
         const tableSpinner = document.querySelector('.spinner-border');
+        const errorOfertasIcon = document.querySelectorAll('.borrar-oferta');
+        const inputBorrarOferta = document.querySelector('#inputBorrarOferta');
+
+        const addDeleteIconListener = (iconDiv) => {
+            iconDiv.addEventListener('click', () => {
+                inputBorrarOferta.value = iconDiv.id.split('-')[1];
+                console.log(inputBorrarOferta);
+            })
+        }
 
         const renderDataToTable = (data) => {
             tableSpinner.classList.add('d-none');
@@ -67,12 +104,19 @@
                 let tdCapKwp = document.createElement('td');
                 let tdDate = document.createElement('td');
                 let tdPrecioOfertado = document.createElement('td');
+                let tdDelete = document.createElement('td');
+                let deleteIcon = document.createElement('i');
 
                 tdNombre.innerText = ofertaProv.oferta_compra.nombre;
                 tdCapKw.innerText = ofertaProv.oferta_compra.max_kw;
                 tdCapKwp.innerText = ofertaProv.oferta_compra.min_wp;
                 tdDate.innerText = ofertaProv.oferta_compra.timestamp.split('T')[0];
                 tdPrecioOfertado.innerText = ofertaProv.precio;
+                deleteIcon.classList.add('far', 'fa-times-circle', 'borrar-oferta');
+                deleteIcon.id = `delete-${ofertaProv.id}`;
+                deleteIcon.dataset.toggle = 'modal';
+                deleteIcon.dataset.target = '#deleteModal';
+                tdDelete.appendChild(deleteIcon);
 
 
                 row.appendChild(tdNombre);
@@ -80,7 +124,10 @@
                 row.appendChild(tdCapKwp);
                 row.appendChild(tdDate);
                 row.appendChild(tdPrecioOfertado);
+                row.appendChild(tdDelete);
                 tableBody.appendChild(row);
+
+                addDeleteIconListener(deleteIcon);
             });
         }
 
