--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -62,6 +62,9 @@
                         {% endif %}
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('solarbeam_admin.licitaciones') }}">Licitaciones</a>
+                </li>
             </ul>
             {% endif %}
             {% else %}
